--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -1,5 +1,15 @@
-.profile__info{
+.profile__info {
     display: flex;
     flex-direction: row;
-    align-items: baseline;
+}
+
+@media screen and (max-width: 568px) {
+    .profile__info {
+        margin-top: 22.25px;
+        margin-left: 35px;
+        font-size: 27px;
+        line-height: 122%;
+        text-align: center;
+        align-items: baseline
+    }
 }
