--- a/blocks/elements/__content/elements__content.css
+++ b/blocks/elements/__content/elements__content.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    margin: 25px 15px 31px 21px;
+    margin: 20px 15px 31px 21px;
     align-items: center;
+    max-height: 79px;
 }
