--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -7,7 +7,7 @@
   display: flex;
   flex-direction: column;
   margin: 0 auto;
-  font-family: 'Inter';
+  font-family: 'Inter', Arial, sans-serif;
 }
 
 @media screen and (max-width: 568px) {
