--- a/blocks/popup/__content/popup__content.css
+++ b/blocks/popup/__content/popup__content.css
@@ -1,9 +1,8 @@
 .popup__content{
-    max-width: 430px;
-    min-height: 330px;
-    position: fixed;
+    width: 430px;
+    height: 330px;
     margin: 0;
-    top: 195px;
+    position: relative;
 }
 
 @media screen and (max-width: 568px) {
@@ -11,6 +10,5 @@
         max-width: 282px;
         min-height: 322px;
         margin: 0 19px 0;
-        top: 123px;
     }
 }
