--- a/blocks/profile/__add-vector/profile__add-vector.css
+++ b/blocks/profile/__add-vector/profile__add-vector.css
@@ -1,3 +1,11 @@
-.profile__add-vector{
-position: absolute;
+.profile__add-vector {
+    width: 22px;
+    height: 22px;
+}
+
+@media screen and (max-width: 568px) {
+    .profile__add-vector {
+        width: 16px;
+        height: 16px;
+    }
 }
