--- a/blocks/profile/__edit-vector/profile__edit-vector.css
+++ b/blocks/profile/__edit-vector/profile__edit-vector.css
@@ -1,4 +1,11 @@
 .profile__edit-vector {
-    position: absolute;
+    width: 10px;
+    height: 10px;
 }
 
+@media screen and (max-width: 568px) {
+    .profile__edit-vector {
+        width: 7.5px;
+        height: 7.5px;
+    }
+}
