--- a/blocks/profile/__edit/profile__edit.css
+++ b/blocks/profile/__edit/profile__edit.css
@@ -2,7 +2,8 @@
        display: flex;
        align-items: center;
        justify-content: center;
-       margin-left: 25px;
+       margin-left: 18px;
+       margin-top: 16px;
        background-color: black;
        width: 24px;
        height: 24px;
@@ -17,7 +18,7 @@
 
 @media screen and (max-width: 568px) {
        .profile__edit {
-              margin: 0 0 0 15px;
+              margin: 0 0 0 12px;
               width: 18px;
               height: 18px;
        }
