--- a/blocks/profile/__info-name/profile__info-name.css
+++ b/blocks/profile/__info-name/profile__info-name.css
@@ -1,8 +1,12 @@
 .profile__info-name {
-    margin: 0 0 16px;
+    margin: 0 0 11px;
     font-weight: 500;
     font-size: 42px;
     line-height: 114%;
+    max-width: 350px;
+    white-space: nowrap;
+    overflow: hidden;
+    
 }
 
 @media screen and (max-width: 568px) {
