--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -10,6 +10,6 @@
         font-size: 27px;
         line-height: 122%;
         text-align: center;
-        align-items: baseline
+        align-items: baseline;
     }
 }
