--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,11 +1,11 @@
 .header {
     max-width: 880px;
-    min-height: 74px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     margin: 45px 200px 40px;
     border-bottom: 1px solid rgba(84, 84, 84, .7);
+    padding-bottom: 41px;
 }
 
 @media screen and (max-width: 1060px) {
@@ -17,7 +17,7 @@
 @media screen and (max-width: 568px) {
     .header {
         min-width: 320px;
-        min-height: 58px;
+        padding-bottom: 31px;
         margin: 28px 0 38px;
     }
 }
