--- a/blocks/elements/__like/_active/elements__like_active.css
+++ b/blocks/elements/__like/_active/elements__like_active.css
@@ -1,4 +1,6 @@
 .elements__like_active {
     opacity: 1;
-    background: url(https://code.s3.yandex.net/web-code/dom/heart-filled.svg) center no-repeat;
+    background: url(../../../../images/like_active.svg);
+    background-position: center;
+    background-repeat: no-repeat;
   }
