--- a/blocks/elements/__like/elements__like.css
+++ b/blocks/elements/__like/elements__like.css
@@ -1,5 +1,5 @@
 .elements__like {
-    background-image: url(https://code.s3.yandex.net/web-code/dom/heart.svg);
+    background-image: url(../../../images/like.svg);
     width: 22px;
     height: 19px;
     border: none;
@@ -16,5 +16,6 @@
 }
 
 .elements__like:focus {
-    background-image: url(https://code.s3.yandex.net/web-code/dom/heart-filled.svg);
+    background-image: url(../../../images/like_active.svg);
+    opacity: 1;
 }
