--- a/blocks/elements/__element/elements__element.css
+++ b/blocks/elements/__element/elements__element.css
@@ -1,6 +1,6 @@
 .elements__element{
     background-color: white;
     max-width: 282px;
-    min-height: 361px;
+    max-height: 362px;
     border-radius: 10px;
 }
