--- a/blocks/footer/__logo/footer__logo.css
+++ b/blocks/footer/__logo/footer__logo.css
@@ -1,12 +1,16 @@
-.footer__logo{
-    max-width: 318px;
-    min-height: 18px;
+.footer__logo {
+    color: #545454;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 122%;
+    margin: 0;
 }
 
 @media screen and (max-width: 568px) {
     .footer__logo {
-        max-width: 282px;
-        min-height: 14px;
+        font-size: 14px;
+        line-height: 121%;
         padding-left: 19px;
     }
 }
