--- a/blocks/elements/__content/elements__content.css
+++ b/blocks/elements/__content/elements__content.css
@@ -2,7 +2,8 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    margin: 20px 15px 31px 21px;
+    margin: 23px 15px 31px 20px;
     align-items: center;
     max-height: 79px;
+    line-height: 0;
 }
