--- a/blocks/elements/__like/elements__like.css
+++ b/blocks/elements/__like/elements__like.css
@@ -9,7 +9,8 @@
     background-color: white;
     background-position: center;
     background-repeat: no-repeat;
-}
+    margin-right: 5px;
+   }
 
 .elements__like:hover {
     opacity: 0.5;
