--- a/blocks/profile/__elements/profile__elements.css
+++ b/blocks/profile/__elements/profile__elements.css
@@ -2,12 +2,13 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    max-width: 700px;
     
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 780px) {
     .profile__elements {
         flex-direction: column;
-        
+        max-width: 282px;
     }
 }
