--- a/blocks/profile/__info-job/profile__info-job.css
+++ b/blocks/profile/__info-job/profile__info-job.css
@@ -4,6 +4,9 @@
     font-size: 18px;
     line-height: 102%;
     max-width: 336px;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
 
 @media screen and (max-width: 568px) {
@@ -11,5 +14,6 @@
         font-size: 14px;
         line-height: 121%;
         text-align: center;
+        max-width: 250px;
     }
 }
