--- a/blocks/profile/__info-name/profile__info-name.css
+++ b/blocks/profile/__info-name/profile__info-name.css
@@ -4,9 +4,9 @@
     font-size: 42px;
     line-height: 114%;
     max-width: 350px;
+    text-overflow: ellipsis;
     white-space: nowrap;
-    overflow: hidden;
-    
+    overflow: hidden; 
 }
 
 @media screen and (max-width: 568px) {
@@ -14,5 +14,6 @@
         font-size: 27px;
         line-height: 122%;
         text-align: center;
+        max-width: 220px;
     }
 }
