--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -13,6 +13,6 @@
     .profile {
         max-width: 282px;
         margin-bottom: 0;
-        justify-content: center
+        justify-content: center;
     }
 }
