feat: old_cards

--- a/pages/index.css
+++ b/pages/index.css
@@ -29,6 +29,8 @@
 @import url(../blocks/elements/__photo/elements__photo.css);
 @import url(../blocks/elements/__text/elements__text.css);
 @import url(../blocks/elements/__content/elements__content.css);
+@import url(../blocks/elements/__delete/elemеnts__delete.css);
+@import url(../blocks/elements/__delete-vector/elemеnts__delete-vector.css);
 
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__logo/footer__logo.css);
