--- a/blocks/elements/__like/elements__like.css
+++ b/blocks/elements/__like/elements__like.css
@@ -16,7 +16,7 @@
     opacity: 0.5;
 }
 
-.elements__like:focus {
+/* .elements__like:focus {
     background-image: url(../../../images/like_active.svg);
     opacity: 1;
-}
+} */
