--- a/pages/index.css
+++ b/pages/index.css
@@ -44,6 +44,11 @@
 @import url(../blocks/popup/__content/popup__content.css);
 @import url(../blocks/popup/__input/popup__input.css);
 @import url(../blocks/popup/_is-opened/popup_is-opened.css);
+@import url(../blocks/popup/__content-open/popup__content-open.css);
+@import url(../blocks/popup/__opened-photo/popup__opened-photo.css);
+@import url(../blocks/popup/__photo-name/popup__photo-name.css);
+@import url(../blocks/popup/_black/popup_black.css);
+
 
 
 
