--- a/blocks/elements/__like/elements__like.css
+++ b/blocks/elements/__like/elements__like.css
@@ -10,6 +10,8 @@
     background-position: center;
     background-repeat: no-repeat;
     margin-right: 5px;
+    opacity: 1;
+    transition: opacity 0.5s linear 0s;
    }
 
 .elements__like:hover {
