--- a/blocks/elements/__photo/elements__photo.css
+++ b/blocks/elements/__photo/elements__photo.css
@@ -1,6 +1,6 @@
 .elements__photo {
-    max-width: 282px;
-    min-height: 282px;
+   width: 100%;
+    height: 282px;
     border-top-right-radius: 10px;
     border-top-left-radius: 10px;
     object-fit: cover;
