--- a/blocks/popup/__close-icon/popup__close-icon.css
+++ b/blocks/popup/__close-icon/popup__close-icon.css
@@ -1,10 +1,14 @@
 .popup__close-icon {
+    position: absolute;
     width: 32px;
     height: 32px;
-}
+    opacity: 1;
+    transition: opacity 0.5s linear 0s;
+    }
 
 .popup__close-icon:hover {
     opacity: 0.6;
+    
 }
 
 @media screen and (max-width: 568px) {
