--- a/blocks/popup/__opened-photo/popup__opened-photo.css
+++ b/blocks/popup/__opened-photo/popup__opened-photo.css
@@ -1,8 +1,16 @@
 .popup__opened-photo {
-    width: 433px;
-    height: 540px;
+    max-width: 816px;
+    max-height: 540px;
     margin: 0;
     position: relative;
+    object-fit: cover;
+}
+
+@media screen and (max-width: 940px) {
+    .popup__opened-photo {
+        max-width: 400px;
+        height: 450px;
+    }
 }
 
 @media screen and (max-width: 568px) {
