--- a/blocks/popup/_is-opened/popup_is-opened.css
+++ b/blocks/popup/_is-opened/popup_is-opened.css
@@ -1,3 +1,7 @@
 .popup_is-opened {
     display: flex;
+    visibility: visible;
+    opacity: 1;
+    pointer-events: all;
+    transition:  visibility 0.5s, opacity 0.5s;
 }
