--- a/blocks/popup/__save/popup__save.css
+++ b/blocks/popup/__save/popup__save.css
@@ -5,7 +5,7 @@
     line-height: 122%;
     text-align: center;
     color: white;
-    max-width: 358px;
+    max-width: 100%;
     min-height: 50px;
     margin: 18px 36px 37px;
     border-radius: 2px;
