--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -9,7 +9,9 @@
     font-size: 14px;
     line-height: 121%;
     padding: 0;
-    margin: 0 30px 36px;
+    margin: 0;
+    width: 100%;
+   
 }
 
 .popup__input:focus {
@@ -19,7 +21,7 @@
 @media screen and (max-width: 568px) {
     .popup__input {
         min-width: 238px;
-        margin: 0 22px 30px;
+       
     }
 }
 
