--- a/blocks/text-error/text-error.css
+++ b/blocks/text-error/text-error.css
@@ -3,6 +3,7 @@
     line-height: 15px;
     color: #FF0000;
     position: absolute;
-    margin-top: -30px;
-    /* visibility: hidden; */
+    top: calc(100% + 5px);
+    left: 0;
+
 }
