--- a/pages/index.css
+++ b/pages/index.css
@@ -54,6 +54,7 @@
 @import url(../blocks/popup/__input/_type_url/popup__input_type_url.css);
 @import url(../blocks/popup/__save/_disabled/popup__save_disabled.css);
 @import url(../blocks/popup/__input/_type_error/popup__input_type_error.css);
+@import url(../blocks/popup/__section/popup__section.css);
 
 @import url(../blocks/error/error.css);
 
