--- a/blocks/popup/__save/_disabled/popup__save_disabled.css
+++ b/blocks/popup/__save/_disabled/popup__save_disabled.css
@@ -4,14 +4,14 @@
     font-size: 18px;
     line-height: 122%;
     text-align: center;
-    color: #E5E5E5;;
+    color: #E5E5E5;
     max-width: 358px;
     min-height: 50px;
     margin: 18px 36px 37px;
     border-radius: 2px;
     cursor: pointer;
     padding: 0;
-    border: 1px solid #E5E5E5;;
+    border: 1px solid #E5E5E5;
     opacity: 1;
     transition: opacity 0.5s linear 0s;
 }
